syntax = "proto3";

option csharp_namespace = "GrpcProject";

import "google/api/annotations.proto"; // REST annotations to generate endpoints REST (used by grpc-gateway)

package greeting;

// Request message
message GreetingRequest {
  string name = 1;
}

// Response message
message GreetingReply {
  string message = 1;
}

// Service definition
service Greeter {
  rpc SayHello (GreetingRequest) returns (GreetingReply) {
    option (google.api.http) = { 
      get: "/v1/sayhello" // REST annotations to generate endpoints REST (used by grpc-gateway)
    };
  }
}
